[CLOUDTRUST-2775] Add Country field
