# api/management/api.go
@@ -28,9 +28,11 @@ type UserRepresentation struct {
 	PhoneNumberVerified  *bool                          `json:"phoneNumberVerified,omitempty"`
 	BirthDate            *string                        `json:"birthDate,omitempty"`
 	BirthLocation        *string                        `json:"birthLocation,omitempty"`
+	Nationality          *string                        `json:"nationality,omitempty"`
 	IDDocumentType       *string                        `json:"idDocumentType,omitempty"`
 	IDDocumentNumber     *string                        `json:"idDocumentNumber,omitempty"`
 	IDDocumentExpiration *string                        `json:"idDocumentExpiration,omitempty"`
+	IDDocumentCountry    *string                        `json:"idDocumentCountry,omitempty"`
 	Groups               *[]string                      `json:"groups,omitempty"`
 	TrustIDGroups        *[]string                      `json:"trustIdGroups,omitempty"`
 	Roles                *[]string                      `json:"roles,omitempty"`
@@ -539,7 +541,14 @@ func (user UserRepresentation) Validate() error {
 		ValidateParameterRegExp(constants.Label, user.Label, constants.RegExpLabel, false).
 		ValidateParameterRegExp(constants.Gender, user.Gender, constants.RegExpGender, false).
 		ValidateParameterDateMultipleLayout(constants.Birthdate, user.BirthDate, constants.SupportedDateLayouts, false).
-		ValidateParameterRegExp(constants.Locale, user.Locale, constants.RegExpLocale, false)
+		ValidateParameterRegExp(constants.BirthLocation, user.BirthLocation, constants.RegExpNameSpecialChars, false).
+		ValidateParameterRegExp(constants.Nationality, user.Nationality, constants.RegExpCountryCode, false).
+		ValidateParameterRegExp(constants.Locale, user.Locale, constants.RegExpLocale, false).
+		ValidateParameterIn(constants.IDDocumentType, user.IDDocumentType, constants.AllowedDocumentTypes, false).
+		ValidateParameterRegExp(constants.IDDocumentNumber, user.IDDocumentNumber, constants.RegExpIDDocumentNumber, false).
+		ValidateParameterLength(constants.IDDocumentNumber, user.IDDocumentNumber, 1, 50, false).
+		ValidateParameterDateMultipleLayout(constants.IDDocumentExpiration, user.IDDocumentExpiration, constants.SupportedDateLayouts, false).
+		ValidateParameterRegExp(constants.IDDocumentCountry, user.IDDocumentCountry, constants.RegExpCountryCode, false)
 
 	if user.Groups != nil {
 		for _, groupID := range *(user.Groups) {
